--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
-site: Ultra
-url: https://example.com
-title: Ultra
-description: Ultra - Super fast Jekyll theme, weighs under 2kb
-twitter:
-  username: yourusername
-  card: summary
+site: TAJD
+url: https://tajd.github.io
+title: TAJD
+description: Thomas Dickson - Scientific software developer
 
 permalink: pretty
 
