update intro page and correct typo

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: TAJD
 url: https://tajd.github.io
 title: TAJD
-description: Thomas Dickson - Scientific software developer
+description: Thomas Dickson - Software developer and Data scientist
 
 permalink: pretty
 
